# par-segmentation

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  README.md  Tests.ipynb  Untitled.ipynb  environment.yml  pyproject.toml  readthedocs.yaml  requirements-all.txt  requirements-dev.txt  requirements-doc.txt  requirements.txt  setup.py  tests.py
.github/workflows/: binder.yaml  ci.yaml  docker.yaml  publish.yaml  run_tests.yaml  test.yaml
binder/: Dockerfile
data/dataset1_n2/00/: ROI.txt  _00.nd  _00_MDAlog.txt  _00_w1DIC SP Camera.TIF  _00_w2488 SP 535-50 Nelio.TIF  _00_w3488 SP 630-75 Nelio-AF.TIF  _00_w4561 SP 630-75 Nelio.TIF
data/dataset1_n2/01/: _01.nd  _01_w1DIC SP Camera.TIF  _01_w3488 SP 630-75 Nelio-AF.TIF
data/dataset1_n2/02/: ROI.txt  _02_MDAlog.txt  _02_w3488 SP 630-75 Nelio-AF.TIF  af_corrected.tif
data/dataset1_n2/03/: ROI.txt  _03_MDAlog.txt  _03_w1DIC SP Camera.TIF  _03_w2488 SP 535-50 Nelio.TIF  _03_w3488 SP 630-75 Nelio-AF.TIF  af_corrected.tif
data/dataset1_n2/04/: ROI.txt  _04.nd  _04_MDAlog.txt  _04_w1DIC SP Camera.TIF  _04_w2488 SP 535-50 Nelio.TIF  _04_w4561 SP 630-75 Nelio.TIF
data/dataset2_par2_neon/00/: _15,60_.nd  _15,60__MDAlog.txt  _15,60__w4561 SP 630-75 Nelio.TIF
data/dataset2_par2_neon/01/: ROI.txt  _15,60_1.nd  (+5 more)
discco/: __init__.py  quantifier.py  roi.py
discoseg/: __init__.py  model.py
discus/: __init__.py  model.py  quantifier.py
docs/: README.md  conf.py  model_flexi.md  requirements.txt
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: conf.py  modules.rst  par_segmentation.rst
membranequant/: __init__.py  autofluorescence.py  funcs.py  interactive.py  legacy.py  model.py  quantification.py  quantificationDifferentialEvolutionMulti.py  quantificationDifferentialEvolutionSingle.py  quantificationGradientDescent.py  quantification_differential_evolution_multi.py  quantification_differential_evolution_single.py  quantification_gradient_descent.py  roi.py  tgf_interpolate.py
par_segmentation/: __init__.py  _interactive.py  _legacy.py  _model.py  _tgf_interpolate.py  discco.py  funcs.py  interactive.py  legacy.py  model.py  model_base.py  model_de.py  model_flexi.py  model_gd.py  quantifier.py  quantifier2.py  quantifier_base.py  roi.py
scripts/: Tests.ipynb  Tutorial.ipynb  animation.ipynb  nwg338_ROI_for_animation.txt  nwg338_ROI_init.txt  nwg338_ROI_manual.txt  nwg338_ROI_mid.txt  nwg338_af_corrected.tif  profiles.ipynb  spline.ipynb
src/: __init__.py  autofluorescence.py  funcs.py  quantification.py  quantificationDifferentialEvolutionMulti.py  quantificationGradientDescent.py  quantification_differential_evolution_multi.py  quantification_differential_evolution_single.py  quantification_gradient_descent.py  roi.py  tgf_interpolate.py
tests/: test_de_completion.py  test_de_correct.py  test_flexi_completion.py  test_flexi_correct.py  test_funcs.py  test_gd_completion.py  test_gd_correct.py  test_notebook.py
(+215 files in other folders)
