[build-system]
requires = ["setuptools"]

[tool.setuptools]
packages = ["par_segmentation"]

[project]
name = "par_segmentation"
description = "Cell cortex segmentation and quantification in C. elegans PAR protein images"
readme = "README.md"
version = "0.1.15"
license = {file = "LICENSE"}
requires-python = ">= 3.11"
authors = [
    { name = "Tom Bland", email = "tom_bland@hotmail.co.uk" },
]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "scikit-image",
    "joblib",
    "tqdm",
    "pandas",
    "absl-py",
    "matplotlib-polyroi>=0.1.6",
    "ipympl",
]

[project.urls]
Documentation = "https://par-segmentation.readthedocs.io/"
Source = "https://github.com/goehringlab/par-segmentation"

[project.optional-dependencies]

tensorflow = [
    "tensorflow>=2.9.1",
]

jax = [
    "jax",
    "optax",
]

dev = [
    "pytest",
    "pre-commit",
    "black",
    "pip-tools",
    "pytest-cov",
    # Also must install jax and tensorflow for tests
]

doc = [
    "sphinx_rtd_theme==1.0.0",
]

